--- a/src/main/generated-sources/xtend/unq_ui/interfaz_gatoEncerrado_2016/.gitignore
+++ b/src/main/generated-sources/xtend/unq_ui/interfaz_gatoEncerrado_2016/.gitignore
@@ -2,3 +2,14 @@
 /.WindowAgregarAccionDeUsarElemento.java._trace
 /.WindowAgregarAccionDeIrAOtraHabitacion.java._trace
 /.WindowQuitarAccionDeIrAOtraHabitacion.java._trace
+/.GatoEncerradoApplication.java._trace
+/.NuevaHabitacionWindow.java._trace
+/.NuevoLaberintoWindow.java._trace
+/.WindowAgregarAccion.java._trace
+/.WindowAgregarAccionDeAgarrarElemento.java._trace
+/GatoEncerradoApplication.java
+/NuevoLaberintoWindow.java
+/WindowAgregarAccion.java
+/WindowAgregarAccionDeAgarrarElemento.java
+/WindowAgregarAccionDeIrAOtraHabitacion.java
+/WindowAgregarAccionDeUsarElemento.java
