Validacion para nombres vacios

--- a/src/main/generated-sources/xtend/unq_ui/interfaz_gatoEncerrado_2016/.gitignore
+++ b/src/main/generated-sources/xtend/unq_ui/interfaz_gatoEncerrado_2016/.gitignore
@@ -13,3 +13,4 @@
 /WindowAgregarAccionDeAgarrarElemento.java
 /WindowAgregarAccionDeIrAOtraHabitacion.java
 /WindowAgregarAccionDeUsarElemento.java
+/NuevaHabitacionWindow.java
