--- a/src/main/generated-sources/xtend/unq_ui/interfaz_gatoEncerrado_2016/.gitignore
+++ b/src/main/generated-sources/xtend/unq_ui/interfaz_gatoEncerrado_2016/.gitignore
@@ -14,3 +14,4 @@
 /WindowAgregarAccionDeIrAOtraHabitacion.java
 /WindowAgregarAccionDeUsarElemento.java
 /NuevaHabitacionWindow.java
+/.WindowAgregarAccionConsecuencia.java._trace
