Arreglada ventana de agregar accion consecuencia.

--- a/src/main/generated-sources/xtend/unq_ui/interfaz_gatoEncerrado_2016/.gitignore
+++ b/src/main/generated-sources/xtend/unq_ui/interfaz_gatoEncerrado_2016/.gitignore
@@ -15,3 +15,4 @@
 /WindowAgregarAccionDeUsarElemento.java
 /NuevaHabitacionWindow.java
 /.WindowAgregarAccionConsecuencia.java._trace
+/WindowAgregarAccionConsecuencia.java
