Login! Cualquier sugerencia avisen!

--- a/src/main/generated-sources/xtend/unq_ui/interfaz_gatoEncerrado_2016/Consecuencias/.gitignore
+++ b/src/main/generated-sources/xtend/unq_ui/interfaz_gatoEncerrado_2016/Consecuencias/.gitignore
@@ -1,2 +1,4 @@
 /.WindowAgregarAccionDeIrAOtraHabitacionConsecuencia.java._trace
 /.WindowAgregarAccionConsecuencia.java._trace
+/WindowAgregarAccionConsecuencia.java
+/WindowAgregarAccionDeIrAOtraHabitacionConsecuencia.java
