Validaciones en el selector

--- a/src/main/generated-sources/xtend/unq_ui/interfaz_gatoEncerrado_2016/Consecuencias/.gitignore
+++ b/src/main/generated-sources/xtend/unq_ui/interfaz_gatoEncerrado_2016/Consecuencias/.gitignore
@@ -2,3 +2,7 @@
 /.WindowAgregarAccionConsecuencia.java._trace
 /WindowAgregarAccionConsecuencia.java
 /WindowAgregarAccionDeIrAOtraHabitacionConsecuencia.java
+/.WindowAgregarAccionDeAgarrarUnElementoConsecuencia.java._trace
+/WindowAgregarAccionDeAgarrarUnElementoConsecuencia.java
+/.WindowAgregarAccionDeUsarUnElementoConsecuencia.java._trace
+/WindowAgregarAccionDeUsarUnElementoConsecuencia.java
